ops/argocd/kustomize/knative-operator/network/sidecar.yaml
apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
  name: default
spec:
  egress:
    - hosts:
      - "./*"                # current namespace
      - "istio-system/*"     # istio-system services
      - "istio-ingress/*"    # istio-ingress services
      - "knative-serving/*"  # knative-serving services
      - "knative-eventing/*" # knative-eventing services
      - "kafka/*"            # kafka services
      - "grafana/*"          # grafana services
